--- a/layers/meta-xt-domd-gen3/recipes-kernel/linux/files/r8a77951-h3ulcb-4x2g-kf-xen.dts
+++ b/layers/meta-xt-domd-gen3/recipes-kernel/linux/files/r8a77951-h3ulcb-4x2g-kf-xen.dts
@@ -9,6 +9,7 @@
 
 #include "r8a77951-ulcb-kf.dts"
 #include "xen-chosen.dtsi"
+#include "xen-dom0less.dtsi"
 
 / {
 	model = "Renesas H3ULCB Kingfisher board based on r8a77951, running XEN hypervisor";
@@ -45,6 +46,13 @@
 	/delete-node/thermal-zones;
 	/delete-node/pmu_a57;
 	/delete-node/pmu_a53;
+
+	chosen {
+		hwdom {
+			memory = <0 0x80000>;	/* memory = 2048	*/
+			cpus = <4>;		/* vcpus = 4		*/
+		};
+	};
 };
 
 /delete-node/&pciec0_ep;
